# language_platform

./: .gitignore  Dockerfile  Procfile  build.sh  docker-compose.yml  local.env  makefile  manage.py  nginx.conf  pyproject.toml  refences.py  requirements.txt  vercel.json
language_platform/: asgi.py  settings.py  urls.py  wsgi.py
memorization/: __init__.py  admin.py  apps.py  gpt_api.py  models.py  producer.py  signals.py  similarity_validation.py  utils.py  views.py
memorization/consumers/: phrase_generator_for_terms_consumer.py  verbs_conjugation_consumer.py
memorization/migrations/: 0001_initial.py  0002_options.py  0002_remove_wordmemorizationrandomtest_lissen.py  0002_rename_wordmemorizationtest_writingwordmemorizationtest_and_more.py  0003_remove_audiowordmemorizationtest_traslation_and_more.py  0003_remove_challenge_amount_and_more.py  0003_rename_challenge_options_word_memorization_random_test.py  0004_alter_wordmemorizationrandomtest_term.py  0004_remove_audiowordmemorizationtest_audio_and_more.py  0004_remove_wordmemorizationrandomtest_answer.py  0005_alter_options_option.py  0005_alter_writingwordmemorizationtest_answer_and_more.py  0005_challenge_language.py  0006_alter_options_option.py  0006_challenge_name.py  0006_gptissues.py  0007_alter_gptissues_answer.py  0007_challenge_random.py  0007_unavailableitem.py  0008_challenges_wordmemorizationtest_and_more.py  0008_historicchallenge.py  0008_remove_unavailableitem_word_memorization_random_test_and_more.py  0009_historicchallenge_challenge.py  0009_wordmemorizationrandomtest_needs_reinforcement.py  0009_wordmemorizationtest_counter.py  0010_challengeshorttext.py  0010_historicchallenge_language.py  0010_remove_wordmemorizationtest_counter.py  0011_remove_challenge_correct_percentage_considered_and_more.py  0011_rename_challenges_challenge_and_more.py  0011_shorttextmemorizationtests.py  0012_rename_question_gptissues_issue.py  0012_rename_shorttextmemorizationtests_shorttextmemorizationtest.py  0012_wordmemorizationrandomtest_historic_challenge.py  0013_gptissues_profile.py  0013_phrasemaker.py  0013_shorttextmemorizationtest_reference.py  0014_challenge_number_of_correct_answers.py  0014_gptissues_tags.py  0014_phrasemaker_translation_options.py  (+49 more)
memorization/templates/: button.html  form.html  formulario.html  result_form.html  success_form.html  template_proof.html
word/: admin.py  apps.py  data_scraping.py  middleware.py  models.py  signals.py  utils.py
word/crowlers/: google_translate.py  word_reference.py
(+99 files in other folders)
