[tool.poetry]
name = "language-platform"
version = "0.1.0"
description = ""
authors = ["luiz.felipe <felipekjs36@gmail.com>"]
readme = "README.md"
packages = [{include = "language_platform"}]

[tool.poetry.dependencies]
python = "3.12.3"
django = "^4.2.1"
psycopg2-binary = "^2.9.6"
gtts = "^2.3.2"
django-dotenv = "^1.4.2"
djangorestframework = "^3.14.0"
deep-translator = "^1.10.1"
thefuzz = "^0.19.0"
flower = "^1.2.0"
tika = "^2.6.0"
unidecode = "^1.3.6"
django-daterange-filter = "^1.3.0"
django-admin-rangefilter = "^0.11.1"
django-ckeditor = "^6.7.0"
langdetect = "^1.0.9"
gunicorn = "^22.0.0"
tinydb = "^4.8.0"
betterjsonstorage = "^1.3.1"
httpx = "0.27.2"
openai = "0.28"
pyttsx3 = "^2.98"
elevenlabs = "^1.55.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
