[tool.poetry]
name = "language-platform"
version = "0.1.0"
description = ""
authors = ["luiz.felipe <felipekjs36@gmail.com>"]
readme = "README.md"
packages = [{include = "language_platform"}]

[tool.poetry.dependencies]
python = "3.12.3"
django = "5.0.6"
psycopg2-binary = "^2.9.6"
django-dotenv = "^1.4.2"
djangorestframework = "^3.14.0"
unidecode = "^1.3.6"
django-daterange-filter = "^1.3.0"
django-admin-rangefilter = "^0.11.1"
django-ckeditor = "^6.7.0"
gunicorn = "^22.0.0"
openai = "2.6.1"
whitenoise = "^6.11.0"
python-dotenv = "^1.2.1"
dj-database-url = "^3.0.1"
django-storages = "^1.14.6"
boto3 = "^1.41.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
